# aidd-plugin

./: .coveragerc  .gitignore  AGENTS.md  COMMANDS.md  QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: ci.yml
agents/: analyst.md  implementer.md  plan-reviewer.md  planner.md  prd-reviewer.md  qa.md  researcher.md  reviewer.md  spec-interview-writer.md  tasklist-refiner.md  validator.md
aidd_runtime/: __init__.py  command_runner.py  feature_ids.py  gates.py  ide_profiles.py  index_sync.py  io_utils.py  readiness_gates.py  resources.py  rlm_config.py  runtime.py  stage_dispatch.py  stage_lexicon.py
docs/: adoption-codex-cursor-kimi.md  layout-convergence-min-migration.md  overview.md  p4.1-stage-dispatch-checklist.md  p4.2-ide-profiles.md  phase0-baseline.md  task-todo-list.md  test-coverage-expansion-plan.md  update-plan.md
hooks/: context-gc-precompact.sh  context-gc-pretooluse.sh  context-gc-sessionstart.sh  context-gc-stop.sh  context-gc-userprompt.sh  format-and-test.sh  gate-qa.sh  gate-tests.sh  gate-workflow.sh  hooklib.py  hooks.json  lint-deps.sh
hooks/context_gc/: __init__.py  precompact_snapshot.py  pretooluse_guard.py  sessionstart_inject.py  stop_update.py  userprompt_guard.py  working_set_builder.py
runtime/aidd_runtime/: __init__.py  active_state.py  index_sync.py  io_utils.py  resources.py  runtime.py  stage_lexicon.py
runtime/kimi_aidd_plugin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: activate.sh  ci-gates.sh  install.sh  test.sh  verify-flows.sh
skills/aidd-core/: SKILL.md
skills/aidd-idea-flow/: SKILL.md
skills/aidd-implement-flow/: SKILL.md
skills/aidd-implementer/: SKILL.md
skills/aidd-init-flow/: SKILL.md
skills/aidd-plan-flow/: SKILL.md
skills/aidd-policy/: SKILL.md
skills/aidd-qa-flow/: SKILL.md
skills/aidd-reference/: SKILL.md  wrapper_contract.md
skills/aidd-research/: SKILL.md
skills/aidd-research-flow/: SKILL.md
skills/aidd-review-flow/: SKILL.md
skills/aidd-reviewer/: SKILL.md
skills/aidd-stage-research/: SKILL.md
skills/idea-new/: SKILL.md
skills/implement/: CONTRACT.yaml  SKILL.md
skills/plan-new/: SKILL.md
skills/qa/: CONTRACT.yaml  SKILL.md
skills/researcher/: SKILL.md
skills/review/: CONTRACT.yaml  SKILL.md
skills/review-spec/: SKILL.md
tests/: conftest.py  test_runtime_basic.py
(+232 files in other folders)
