[project]
name = "aidd-plugin"
version = "0.1.0"
description = "AIDD (AI-Driven Development) plugin for Kimi/Codex/Cursor"
requires-python = ">=3.13"
dependencies = [
    "pydantic==2.8.2",
    "pyyaml==6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
    "black==24.8.0",
    "ruff==0.5.5",
    "mypy==1.11.2",
]

[tool.setuptools.packages.find]
where = ["runtime"]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
